feat: 添加UE支持和本地脚本管理系统
1. 新增 Unreal Engine 连接与执行支持，包括 Socket 通信和 HTTP 远程控制
2. 增加本地脚本系统，允许用户在"我的文档"目录下存储私有工具
3. 实现 UE 自动配置功能，支持自动部署监听器脚本到项目目录
4. 添加本地配置文件管理，提供端口、UE项目路径等用户级设置
5. 优化界面，增加 DCC 设置按钮和工具来源显示

--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,8 @@ framework.log
 # Test coverage
 htmlcov/
 .coverage
+
+# Local user settings (DO NOT COMMIT)
+configs/local_settings.json
+local_settings.json
+*.local.json
