feat: 添加'其他工具'分类支持 - 添加'其他工具'标签页 (create_tools_panel) - 支持扫描 other 类型工具目录 - other 类型工具默认独立运行模式 - 双击 other 工具直接独立执行 - 添加 clipboard_info 示例工具 - 修复 tool_groups.json 格式 (groups 改为列表)

--- a/src/plugins/ue/example_print_selection/config.json
+++ b/src/plugins/ue/example_print_selection/config.json
@@ -9,7 +9,8 @@
     "max_version": "5.4",
     "description": "获取Unreal Engine中选择的资产并打印其名称 - 示例脚本",
     "author": "DCC Tool Framework Team",
-    "entry_point": "plugin.py"
+    "entry_point": "plugin.py",
+    "tags": ["utility"]
   },
   "dependencies": {
     "required": ["unreal"],
