--- a/src/plugins/other/clipboard_info/config.json
+++ b/src/plugins/other/clipboard_info/config.json
@@ -1,6 +1,6 @@
 {
     "plugin": {
-        "name": "剪贴板信息工具",
+        "name": "[示例] 剪贴板信息工具",
         "version": "1.0.0",
         "type": "other",
         "description": "获取并打印当前剪贴板中的内容，支持文本和文件列表。\n\n功能：\n- 检测剪贴板中的文件路径（复制的文件）\n- 检测剪贴板中的文本内容\n- 显示剪贴板内容类型和详细信息",
