fix: 修复自动化任务编辑界面触发器配置问题 - 修复 _clear_edit_panel 销毁控件导致参数消失的问题 - 统一 TriggerConfigWidget 内部 config_widgets 存储格式为 (type, variable) 元组 - 修复 _get_trigger_name 使用 trigger_display_map 统一显示名称 - 修复 scheduled 触发器验证逻辑检查 days 数组 - 添加遗留任务的触发器类型模糊匹配恢复逻辑

--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,6 @@ htmlcov/
 configs/local_settings.json
 local_settings.json
 *.local.json
+
+# GUI Testing Directory (DO NOT COMMIT - Contains local test data, logs, and screenshots)
+debug_tests/
