项目清理与文档完善 v2.0.0 - 删除测试文件和临时目录 (debug_tests/, tasks/, test_*.py等) - 新增系统架构与功能说明文档（含流程图、状态机规则） - 更新README.md，反映最新项目结构和功能 - 更新美术人员使用指南，增加自动化系统说明 - 完善.gitignore，排除测试文件和本地运行时数据

--- a/.gitignore
+++ b/.gitignore
@@ -178,3 +178,16 @@ local_settings.json
 
 # GUI Testing Directory (DO NOT COMMIT - Contains local test data, logs, and screenshots)
 debug_tests/
+
+# Temporary test files
+test_*.py
+simple_edit_test.py
+test_automation_data/
+tasks/
+
+# Automation task data (local runtime data)
+configs/automation_tasks.json
+
+# OpenSpec temporary files
+openspec/changes/*.md
+!openspec/changes/archive/
